# similarity-ts-cli

./: .gitignore  README.md  cli.py  ed.py  pyproject.toml  requirements.txt
data_samples/alibaba2018/: machine_usage_days_1_to_8_grouped_300_seconds.csv  ts1_machine_usage_days_1_to_8_grouped_300_seconds.csv
data_samples/alibaba2018/generated_data/: sample_0.csv  sample_1.csv  sample_10.csv  sample_1000.csv  sample_1003.csv  sample_1004.csv  sample_1007.csv  sample_101.csv  sample_1010.csv  sample_1011.csv  sample_1015.csv  sample_1016.csv  sample_1018.csv  sample_1019.csv  sample_102.csv  sample_1023.csv  sample_1024.csv  sample_1025.csv  sample_1026.csv  sample_1028.csv  sample_1034.csv  sample_1035.csv  sample_1037.csv  sample_1040.csv  sample_1042.csv  sample_1044.csv  sample_1047.csv  sample_1049.csv  sample_1050.csv  sample_1054.csv  sample_1055.csv  sample_1058.csv  sample_106.csv  sample_1060.csv  sample_1061.csv  sample_1062.csv  sample_1063.csv  sample_1065.csv  sample_1068.csv  sample_1069.csv  (+911 more)
data_samples/alibaba2018/ts2/: sample_0.csv  sample_1.csv  sample_100.csv  sample_1001.csv  sample_1002.csv  sample_1005.csv  sample_1006.csv  sample_1008.csv  sample_1009.csv  sample_1012.csv  sample_1013.csv  sample_1014.csv  sample_1017.csv  sample_1020.csv  sample_1021.csv  sample_1022.csv  sample_1027.csv  sample_1029.csv  sample_103.csv  sample_1030.csv  sample_1031.csv  sample_1032.csv  sample_1033.csv  sample_1036.csv  (+983 more)
data_samples/dowjones/: ts1_AAPL_2006-01-01_to_2018-01-01.csv
data_samples/sinoidal/: sin-cos.csv
src/similarity_ts_cli/: cli.py
(+40 files in other folders)
